Change tab icon and fix column cut-off bug
Change tab icon from react default (how was that a thing?? and add
`break-inside: avoid;` to sections under index views broken into columns
(so that the photo items will not be broken up when unevenly hitting the
end of the column)

--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -201,11 +201,19 @@ body {
     column-count: 2;
     column-width: 10px;
     text-align: justify;
+
+    section {
+      break-inside: avoid;
+    }
   }
 }
 
 @media only screen and (min-width: 1000px) {
   #index-wrapper {
     column-count: 3;
+
+    section {
+      break-inside: avoid;
+    }
   }
 }
